--- a/project-bolt-sb1-jxw5yqka (2)/project/app.json
+++ b/project-bolt-sb1-jxw5yqka (2)/project/app.json
@@ -8,6 +8,7 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "owner": "votre-username-expo",
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/icon.png",
